--- a/TCH2_WestSiberianRailroad/Views/Start/Index.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Start/Index.cshtml
@@ -8,7 +8,7 @@
         <legend>Авторизация сотрудника ТЧЭ-2</legend>
         <input type="text" id="inpEmail" placeholder="Email" />
         <br />
-        <input type="text" id="inpPassword" placeholder="Пароль" />
+        <input type="password" id="inpPassword" placeholder="Пароль" />
         <br />
         <button id="signInButton">Войти</button>
     </fieldset>
