--- a/TCH2_WestSiberianRailroad/Views/Shared/_Layout.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - ТЧЭ-2 ЗСЖД</title>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/account.css" />
+    <link rel="stylesheet" href="~/css/pop-up.css" />
 </head>
 <body>
     <header>
@@ -24,5 +25,6 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/account.js"></script>
+    <script src="/js/data.js"></script>
 </body>
 </html>
