--- a/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
@@ -20,6 +20,11 @@
     </div>
     <div class="pageBlock" id="mainArticle">
         <div id="infoDisplay"></div>
+        <div id="paginationBlock">
+            <div class="paginationPart" id="paginationLeftPart"><img src="~/images/arrow.png" id="pageLeft" title="Назад"/></div>
+            <div id="paginationMiddle"></div>
+            <div  class="paginationPart" id="paginationRightPart"><img src="~/images/arrow.png" id="pageRight" title="Вперёд" /></div>
+        </div>
         <div id="controlPanel">
             <button id="addNewEntity">Добавить</button>
             <button id="updateEntity">Изменить</button>
