--- a/TCH2_WestSiberianRailroad/Views/Account/UnconfirmedAccount.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Account/UnconfirmedAccount.cshtml
@@ -1,8 +1,45 @@
 ﻿@{
-    ViewData["Title"] = $"Личный кабинет";
+    ViewData["Title"] = $"Почта не подтверждена";
 }
 
 
 <div class="main">
-    <h3>Аккаунт не подтверждён. На Вашу почту отправлено письмо с активацией аккаунта.</h3>
+    <div class="pageBlock" id="mainHeader">
+        <button style="width: 250px; margin-left: 10px;" id="sendConfirmAgain">Отправить письмо ещё раз</button>
+    </div>
+    <div class="pageBlock" id="mainArticle" style="border: none;">
+        <h3 style="color: gold;">Аккаунт не подтверждён. На Вашу почту отправлено письмо с активацией аккаунта.</h3>
+    </div>
 </div>
+
+<script>
+    var handler = setInterval(CheckForEmailConfirm, 10000);
+
+    $('#sendConfirmAgain').click(function () {
+        $.ajax({
+            url: 'https://localhost:44356/account/sendAgain',
+            method: 'GET',
+            success: function () {
+                DisplayMessage('На Вашу почту повторно отправлено письмо', true);
+            },
+            error: function () {
+                DisplayMessage('Ошибка запроса', false);
+            }
+        });
+    });
+
+    function CheckForEmailConfirm() {
+        console.log('.:: Функция проверяет');
+        $.ajax({
+            url: 'https://localhost:44356/content/checkemailstatus',
+            method: 'GET',
+            success: function (response) {
+                if (response == true) {
+                    clearInterval(handler);
+                    window.location.href = '/content/driverassistant';
+                }
+            }
+        });
+    }
+
+</script>
