--- a/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
@@ -86,3 +86,11 @@
         <button id="cancelCreatingNewAccount">Отмена</button>
     </div>
 </div>
+
+<div class="pop-up-confirmEmployeeRemove">
+    <p>Подтвердите операцию удаления сотрудника</p>
+    <div class="confirmEmplRemove-buttons-block">
+        <button id="employeeRemoveConfirmButton">Подтвердить</button>
+        <button id="cancelEmployeeRemoveButton">Отмена</button>
+    </div>
+</div>
