Update employee function has been added

--- a/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
@@ -81,6 +81,7 @@
         <p>Роль:&nbsp;<select id="selectRole"></select>&nbsp;Должность:&nbsp;<select id="selectPosition"></select></p>
     </div>
     <div class="pop-up-createNewEmpl-block" id="lowerBasement">
+        <button id="executeUpdateEmployeeData">Сохранить</button>
         <button id="executeCreatingNewAccount">Создать</button>
         <button id="clearCreatingNewAccount">Очистить</button>
         <button id="cancelCreatingNewAccount">Отмена</button>
