Recover employee from archive function has been added

--- a/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
@@ -43,6 +43,7 @@
         </div>
         <div id="controlPanel">
             <button id="addNewEntity">Добавить</button>
+            <button id="recoverEntity">Восстановить</button>
             <button id="updateEntity">Изменить</button>
             <button id="deleteEntity">Удалить</button>
         </div>
@@ -90,8 +91,16 @@
 
 <div class="pop-up-confirmEmployeeRemove">
     <p>Подтвердите операцию удаления сотрудника</p>
-    <div class="confirmEmplRemove-buttons-block">
+    <div class="confirm-buttons-block">
         <button id="employeeRemoveConfirmButton">Подтвердить</button>
         <button id="cancelEmployeeRemoveButton">Отмена</button>
+    </div>
+</div>
+
+<div class="pop-up-confirmRecover">
+    <p>Подтвердите операцию восстановления</p>
+    <div class="confirm-buttons-block">
+        <button id="recoverConfirmButton">Подтвердить</button>
+        <button id="cancelRecoverButton">Отмена</button>
     </div>
 </div>
