Update position function has been added

--- a/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
@@ -119,6 +119,7 @@
     </div>
     <div class="pop-up-block" id="lowerBasement">
         <button id="addNewPosition">Добавить</button>
+        <button id="executeUpdatePositionData">Изменить</button>
         <button id="closePositionModal">Отмена</button>
     </div>
 </div>
