Position remove function has been added

--- a/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Content/Admin.cshtml
@@ -89,10 +89,11 @@
     </div>
 </div>
 
-<div class="pop-up-confirmEmployeeRemove">
-    <p>Подтвердите операцию удаления сотрудника</p>
+<div class="pop-up-confirmRemove">
+    <p>Подтвердите операцию удаления</p>
     <div class="confirm-buttons-block">
         <button id="employeeRemoveConfirmButton">Подтвердить</button>
+        <button id="positionRemoveConfirmButton">Подтвердить</button>
         <button id="cancelEmployeeRemoveButton">Отмена</button>
     </div>
 </div>
