--- a/TCH2_WestSiberianRailroad/wwwroot/css/site.css
+++ b/TCH2_WestSiberianRailroad/wwwroot/css/site.css
@@ -7,7 +7,9 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #1c1c1c;
-    color: #04eaed;
+    background-image: url(/images/background.png);
+    background-size: 100%;
+    color: #ffaf00;
     text-align: center;
     font-family: 'Franklin Gothic';
 }
@@ -48,7 +50,7 @@ main > fieldset,
 .pop-up-nameSetting fieldset,
 .pop-up-createNewEmpl-block fieldset {
     width: 15%;
-    border: 1px solid #04eaed;
+    border: 1px solid #ffaf00;
     border-radius: 4px;
 }
 
