--- a/TCH2_WestSiberianRailroad/Views/Shared/_Layout.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/account.css" />
     <link rel="stylesheet" href="~/css/pop-up.css" />
+    <link rel="stylesheet" href="~/css/engineer/account.css" />
 </head>
 <body>
     <header>
@@ -26,5 +27,6 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/account.js"></script>
     <script src="/js/data.js"></script>
+    <script src="/js/engineer/account.js"></script>
 </body>
 </html>
