--- a/TCH2_WestSiberianRailroad/wwwroot/css/site.css
+++ b/TCH2_WestSiberianRailroad/wwwroot/css/site.css
@@ -92,3 +92,28 @@ input, button {
 #signInButton:active {
     background-color: #04eaed;
 }
+
+.statusBlock {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    margin-left: 20px;
+}
+
+#indicator {
+    width: 12px;
+    height: 12px;
+    background-color: #4cff00;
+    border-radius: 50%;
+    box-shadow: 0px 0px 7px 3px #b6ff00;
+}
+
+#currentState{
+    width: 70%;
+    color: #4cff00;
+    font-weight: bold;
+    font-family: Verdana;
+    text-align: left;
+    padding-left: 10px;
+}
