--- a/TCH2_WestSiberianRailroad/Views/Content/DriverInstructor.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Content/DriverInstructor.cshtml
@@ -20,7 +20,16 @@
         </div>
     </div>
     <div class="pageBlock" id="mainNav">
-
+        <div class="headerMainNav">
+            <h3>Колонна</h3>
+        </div>
+        <button class="mainNavButton" id="">Состав колонны</button>
+        <button class="mainNavButton" id="">Бригады</button>
+        <div class="headerMainNav">
+            <h3>Инструктажи</h3>
+        </div>
+        <button class="mainNavButton" id="">Список</button>
+        <button class="mainNavButton" id="">Создать новый</button>
     </div>
     <div class="pageBlock" id="mainArticle">
         <div id="infoDisplay"></div>
