--- a/TCH2_WestSiberianRailroad/Views/Shared/_Layout.cshtml
+++ b/TCH2_WestSiberianRailroad/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="32x32">
+    <link rel="shortcut icon" href="#" />
     <title>@ViewData["Title"] - ТЧЭ-2 ЗСЖД</title>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/account.css" />
@@ -29,5 +29,6 @@
     <script src="~/js/account.js"></script>
     <script src="/js/data.js"></script>
     <script src="/js/engineer/account.js"></script>
+    <script src="/js/contractor/account.js"></script>
 </body>
 </html>
