--- a/TCH2_WestSiberianRailroad/wwwroot/css/pop-up.css
+++ b/TCH2_WestSiberianRailroad/wwwroot/css/pop-up.css
@@ -2,7 +2,8 @@
 .pop-up-createNewEmployee,
 .pop-up-confirmRemove,
 .pop-up-confirmRecover,
-.pop-up-actionWithPosition {
+.pop-up-actionWithPosition,
+.pop-up-createNewColumn {
     flex-direction: column;
     padding: 0;
     position: fixed;
@@ -24,7 +25,8 @@
     box-shadow: 0 0 7px 3px #48ff5b;
 }
 
-.pop-up-createNewEmployee {
+.pop-up-createNewEmployee,
+.pop-up-createNewColumn {
     flex-direction: column;
     align-content: start;
     width: 45%;
@@ -35,11 +37,19 @@
     box-shadow: 0px 0px 7px 3px orange;
 }
 
+.pop-up-createNewColumn {
+    width: 30%;
+    height: 22%;
+    justify-items: center;
+    align-items: center;
+}
+
 #executeUpdateEmployeeData {
     display: none;
 }
 
-.pop-up-createNewEmp-block {
+.pop-up-createNewEmp-block,
+.createNewColumn-block {
     display: flex;
     flex-direction: row;
     padding: 0;
@@ -82,6 +92,11 @@ select {
 
 .pop-up-createNewEmpl-block select {
     width: 33%;
+}
+
+.pop-up-createNewColumn select {
+    width: 200px;
+    height: 24px;
 }
 
 #lowerBasement {
@@ -180,4 +195,19 @@ select {
 #newPositionAbbreviation {
     width: 57%;
     text-align: center;
+}
+
+#createNewColumn-header {
+    width: 90%;
+    height: 20px;
+    background-color: #3f3c3c;
+    border-bottom: 1px solid #ffd800;
+    color: #ff6a00;
+    font-family: serpentine;
+}
+
+.pop-up-newColumn-p {
+    margin: 0;
+    padding: 0;
+    justify-content: flex-end;
 }
